knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/PreventiveCareAgreement/fields/Admin_Hours__c.field-meta.xml
<CustomField>
    <fullName>Admin_Hours__c</fullName>
    <label>Admin Hours</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>