knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/PreventiveCareAgreement/fields/Cloned_From__c.field-meta.xml
<CustomField>
    <fullName>Cloned_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloned From</label>
    <referenceTo>PreventiveCareAgreement</referenceTo>
    <relationshipLabel>Preventive Care Agreements</relationshipLabel>
    <relationshipName>Preventive_Care_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>