knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/PreventiveCareAgreement/fields/contractId__c.field-meta.xml
<CustomField>
    <fullName>contractId__c</fullName>
    <formula>ContractPaymentAgreement.ContractId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>contractId</label>
    <type>Text</type>
</CustomField>