knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/PreventiveCareAgreement/fields/Daily_Encounter_Pay_Cap__c.field-meta.xml
<CustomField>
    <fullName>Daily_Encounter_Pay_Cap__c</fullName>
    <label>Daily Encounter Pay Cap</label>
    <type>TextArea</type>
</CustomField>