knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/PreventiveCareAgreement/fields/EE_NP_PA_Hourly_Blended__c.field-meta.xml
<CustomField>
    <fullName>EE_NP_PA_Hourly_Blended__c</fullName>
    <description>Created as part of PR1050558-4998</description>
    <formula>IF(
    OR(
        ISBLANK(ContractPaymentAgreement.Contract.EE_NP_PA_Hourly_Blended__c),
        ContractPaymentAgreement.Contract.EE_NP_PA_Hourly_Blended__c == 0
    ),
    0,
    IF(
        ISBLANK(Shift__c),
        0,
        IF(
            AND(
                NOT(ISBLANK(Shift__c)),
                Shift__r.Shift_Name__r.Name &lt;&gt; &quot;Shift Bonus&quot;
            ),
            ContractPaymentAgreement.Contract.EE_NP_PA_Hourly_Blended__c,
            0
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EE NP/PA Hourly Blended</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>