knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/PreventiveCareAgreement/fields/Existing_Rate_Increased__c.field-meta.xml
<CustomField>
    <fullName>Existing_Rate_Increased__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Rate Increased?</label>
    <type>Checkbox</type>
</CustomField>