knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/PreventiveCareAgreement/fields/Facility_Level_Rate__c.field-meta.xml
<CustomField>
    <fullName>Facility_Level_Rate__c</fullName>
    <formula>TEXT(Facility_Rate__r.Rate__c)</formula>
    <label>Facility Level Rate</label>
    <type>Text</type>
</CustomField>