knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/PreventiveCareAgreement/fields/Facility_Rate__c.field-meta.xml
<CustomField>
    <fullName>Facility_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility Rate</label>
    <referenceTo>PreventiveCareAgreement</referenceTo>
    <relationshipLabel>Preventive Care Agreements (Facility Rate)</relationshipLabel>
    <relationshipName>Preventive_Care_Agreements1</relationshipName>
    <type>Lookup</type>
</CustomField>