knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/PreventiveCareAgreement/fields/Facility_Title__c.field-meta.xml
<CustomField>
    <fullName>Facility_Title__c</fullName>
    <label>Facility Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACES EE Nurse Practitioner</fullName>
            </value>
            <value>
                <fullName>ACES EE Physician Assistant</fullName>
            </value>
            <value>
                <fullName>ACES Medical Director</fullName>
            </value>
            <value>
                <fullName>ACES Nurse Practitioner</fullName>
            </value>
            <value>
                <fullName>ACES Physician Assistant</fullName>
            </value>
            <value>
                <fullName>ACES Physician EM</fullName>
            </value>
            <value>
                <fullName>ACES Physician PC</fullName>
            </value>
            <value>
                <fullName>Ambassador NP/PA</fullName>
            </value>
            <value>
                <fullName>Ambassador Physician</fullName>
            </value>
            <value>
                <fullName>Assistant Medical Director</fullName>
            </value>
            <value>
                <fullName>EE Assistant System Medical Officer</fullName>
            </value>
            <value>
                <fullName>EE Asst Hospital Med Program Director</fullName>
            </value>
            <value>
                <fullName>EE Hospital Medicine Program Director</fullName>
            </value>
            <value>
                <fullName>EE Lead Midlevel Provider</fullName>
            </value>
            <value>
                <fullName>EE Nurse Practitioner</fullName>
            </value>
            <value>
                <fullName>EE Physician</fullName>
            </value>
            <value>
                <fullName>EE Physician Assistant</fullName>
            </value>
            <value>
                <fullName>EE System Medical Officer</fullName>
            </value>
            <value>
                <fullName>Elite</fullName>
            </value>
            <value>
                <fullName>External Locums</fullName>
            </value>
            <value>
                <fullName>Hospital Medicine Program Administrator</fullName>
            </value>
            <value>
                <fullName>Interim Medical Director</fullName>
            </value>
            <value>
                <fullName>Leased Employee</fullName>
            </value>
            <value>
                <fullName>Leased Medical Director</fullName>
            </value>
            <value>
                <fullName>Medical Director</fullName>
            </value>
            <value>
                <fullName>Nurse Practitioner</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Partner Asst Medical Director</fullName>
            </value>
            <value>
                <fullName>Partner Medical Director</fullName>
            </value>
            <value>
                <fullName>Physician</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>