knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/PreventiveCareAgreement/fields/FacilityTitle__c.field-meta.xml
<CustomField>
    <fullName>FacilityTitle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility Title</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <filterItems>
            <field>CodeSet.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>CodeSet.CodeSetType</field>
            <operation>equals</operation>
            <value>Facility Title</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CodeSet</referenceTo>
    <relationshipLabel>Preventive Care Agreements (Facility Title)</relationshipLabel>
    <relationshipName>Preventive_Care_Agreements1</relationshipName>
    <type>Lookup</type>
</CustomField>