knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/PreventiveCareAgreement/fields/Is_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Is_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field to track soft delete of PCA record.</description>
    <label>Is Deleted</label>
    <type>Checkbox</type>
</CustomField>