knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/PreventiveCareAgreement/fields/Is_Newly_Added__c.field-meta.xml
<CustomField>
    <fullName>Is_Newly_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Newly Added?</label>
    <type>Checkbox</type>
</CustomField>