knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/PreventiveCareAgreement/fields/Legacy_Facility_Rate_Title_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Facility_Rate_Title_Id__c</fullName>
    <label>Legacy Facility Rate Title Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>