knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/PreventiveCareAgreement/fields/Legacy_Pay_Rate_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Pay_Rate_Id__c</fullName>
    <label>Legacy Pay Rate Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>