knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/PreventiveCareAgreement/fields/Legacy_Shift_Name__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Shift_Name__c</fullName>
    <label>Legacy Shift Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>