knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/PreventiveCareAgreement/fields/Mixed_Bag_Shift_Rates__c.field-meta.xml
<CustomField>
    <fullName>Mixed_Bag_Shift_Rates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mixed Bag Shift Rates?</label>
    <type>Checkbox</type>
</CustomField>