knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/PreventiveCareAgreement/fields/Months_Provider_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Months_Provider_Guarantee__c</fullName>
    <label># Months Provider Guarantee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>