knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/PreventiveCareAgreement/fields/New_Shift_Type_Added__c.field-meta.xml
<CustomField>
    <fullName>New_Shift_Type_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Shift Type Added?</label>
    <type>Checkbox</type>
</CustomField>