knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/PreventiveCareAgreement/fields/Over_Rate__c.field-meta.xml
<CustomField>
    <fullName>Over_Rate__c</fullName>
    <formula>IF( NOT( Is_Deleted__c ) , IF( Rate__c  &gt; VALUE(Facility_Level_Rate__c), 1, 0) , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Over Rate?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>