knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/PreventiveCareAgreement/fields/Override_Prohibited__c.field-meta.xml
<CustomField>
    <fullName>Override_Prohibited__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, recruiters are not able to modify the rate for a clinician</inlineHelpText>
    <label>Override Prohibited</label>
    <type>Checkbox</type>
</CustomField>