knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/PreventiveCareAgreement/fields/Payments__c.field-meta.xml
<CustomField>
    <fullName>Payments__c</fullName>
    <label>Payments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Payment</fullName>
            </value>
            <value>
                <fullName>2 Payments</fullName>
            </value>
            <value>
                <fullName>3 Payments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>