knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/PreventiveCareAgreement/fields/Payroll_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Cycle__c</fullName>
    <inlineHelpText>Months after milestone</inlineHelpText>
    <label>Payroll Cycle</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>