knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/PreventiveCareAgreement/fields/Previous_Rate__c.field-meta.xml
<CustomField>
    <fullName>Previous_Rate__c</fullName>
    <formula>TEXT(Cloned_From__r.Rate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Rate</label>
    <type>Text</type>
</CustomField>