knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/PreventiveCareAgreement/fields/RatePay_Code_Added__c.field-meta.xml
<CustomField>
    <fullName>RatePay_Code_Added__c</fullName>
    <label>Rate Pay Code Added?</label>
    <summaryFilterItems>
        <field>Rate_Pay_Code__c.Is_Deleted__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Rate_Pay_Code__c.Preventive_Care_Agreement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>