knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/PreventiveCareAgreement/fields/Repayment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Terms__c</fullName>
    <label>Repayment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Pro Rata</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>