knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/PreventiveCareAgreement/fields/RVU_Metric_Type__c.field-meta.xml
<CustomField>
    <fullName>RVU_Metric_Type__c</fullName>
    <label>RVU Metric Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RVU</fullName>
            </value>
            <value>
                <fullName>wRVU</fullName>
            </value>
            <value>
                <fullName>Encounter</fullName>
            </value>
            <value>
                <fullName>QPI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>