knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/PreventiveCareAgreement/fields/Shift__c.field-meta.xml
<CustomField>
    <fullName>Shift__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Shift</label>
    <referenceTo>Shift__c</referenceTo>
    <relationshipLabel>Preventive Care Agreements</relationshipLabel>
    <relationshipName>Preventive_Care_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>