knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/PreventiveCareAgreement/fields/Shift_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Shift_Full_Name__c</fullName>
    <formula>Type__r.Name + &apos; &apos; +  Shift_Iteration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shift Full Name</label>
    <type>Text</type>
</CustomField>