knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/PreventiveCareAgreement/fields/Shift_Iteration__c.field-meta.xml
<CustomField>
    <fullName>Shift_Iteration__c</fullName>
    <label>Shift Iteration</label>
    <length>20</length>
    <type>Text</type>
</CustomField>