knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/PreventiveCareAgreement/fields/Shifts_Requested__c.field-meta.xml
<CustomField>
    <fullName>Shifts_Requested__c</fullName>
    <label>Shifts Requested</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>