knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/PreventiveCareAgreement/fields/Stipend_Tier__c.field-meta.xml
<CustomField>
    <fullName>Stipend_Tier__c</fullName>
    <label>Stipend Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Tier 4</fullName>
            </value>
            <value>
                <fullName>Legacy</fullName>
            </value>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>NPPA</fullName>
            </value>
            <value>
                <fullName>MDI Plan A</fullName>
            </value>
            <value>
                <fullName>MDI Plan B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>