knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/PreventiveCareAgreement/fields/System_Copied_from_Previous_Contract__c.field-meta.xml
<CustomField>
    <fullName>System_Copied_from_Previous_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>System Copied from Previous Contract?</label>
    <type>Checkbox</type>
</CustomField>