knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/PreventiveCareAgreement/fields/Target_RVU_Per_Hour__c.field-meta.xml
<CustomField>
    <fullName>Target_RVU_Per_Hour__c</fullName>
    <label>Target RVU Per Hour</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>