knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/PreventiveCareAgreement/fields/Time_Type__c.field-meta.xml
<CustomField>
    <fullName>Time_Type__c</fullName>
    <label>Time Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Time_Type</valueSetName>
    </valueSet>
</CustomField>