knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/PreventiveCareAgreement/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Type</label>
    <referenceTo>CodeSet</referenceTo>
    <relationshipLabel>Preventive Care Agreements (Type)</relationshipLabel>
    <relationshipName>Preventive_Care_Agreements2</relationshipName>
    <type>Lookup</type>
</CustomField>