knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/PreventiveCareAgreement/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>per Metric</fullName>
            </value>
            <value>
                <fullName>% Salary Reduction</fullName>
            </value>
            <value>
                <fullName>per Monthly Tier</fullName>
            </value>
            <value>
                <fullName>per Hour</fullName>
            </value>
            <value>
                <fullName>per Shift</fullName>
            </value>
            <value>
                <fullName>per Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>