knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/PreventiveCareAgreement/fields/Variable_Target_RVU_hr__c.field-meta.xml
<CustomField>
    <fullName>Variable_Target_RVU_hr__c</fullName>
    <label>Variable % Target RVU/ HR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>