knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/PreventiveCareAgreement/fields/Work_Commitment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Work_Commitment_Frequency__c</fullName>
    <label>Work Commitment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shifts</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>