knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/PreventiveCareAgreement/fields/Work_Commitment_per_Month__c.field-meta.xml
<CustomField>
    <fullName>Work_Commitment_per_Month__c</fullName>
    <label>Work Commitment per Month</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>