knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/PreventiveCareAgreement/validationRules/Payroll_Cycle_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Payroll_Cycle_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Payments__c,&apos;2 Payments&apos;) &amp;&amp;  ISNULL( Payroll_Cycle__c)</errorConditionFormula>
    <errorDisplayField>Payroll_Cycle__c</errorDisplayField>
    <errorMessage>Payroll Cycle is required when Payments is selected as 2 Payments</errorMessage>
</ValidationRule>